--- a/index.html
+++ b/index.html
@@ -7,32 +7,46 @@
 </head>
 
 <body>
+    <div id="nav">
+        <ul id="navbar">
+            <li>Gmail</li>
+            <li>Images</li>
+            <li>Menu</li>
+        </ul>
+    </div>
 
     <div id="logo">
         <img src="./assets/googlelogo_color_272x92dp.png" alt="Gooogle logo">
     </div>
 
     <div id="box">
-
         <div id="formfield">
-
             <div id="form">
-
-                <div class="left">
+                <div class="iconleft">
                     <img src="./assets/iconmonstr-magnifier-2.svg" alt="Magnifier icon">
                 </div>
-                <div class="right">
+                <div class="iconright">
                     <img src="./assets/iconmonstr-microphone-4.svg" alt="Mic icon">
                 </div>
-
             </div>
         </div>
+    </div>
 
-        <div id="footer">
-            <span>Ireland</span>
+    <div class="subtitle">
+        Google offered in: Gaeilge
+    </div>
 
-
-        </div>
+    <div id="footer">
+        <span>Ireland</span>
+        <ul>
+            <li>Settings</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>About</li>
+        </ul>
+    </div>
 
 </body>
 
